--- a/docs/az/az-900.md
+++ b/docs/az/az-900.md
@@ -3,3 +3,122 @@ sidebar_position: 1
 ---
 
 # AZ-900
+
+## Regions and Geographics
+
+Una region es un grupo de multiples datacenters cada datacenter se lo conoce como 
+un availability zone. 
+
+En total azure tiene 58 regiones en 140 paises
+
+Por otro lado las geografias son un mercado conformado de 2 o mas regiones 
+que preserva el estado de la informacion y los limites de confianza
+
+Tenemos geografia en:
+- canada
+- usa 
+- govierno de usa 
+- brazil 
+- mexico
+
+:::tip
+**Paired regions**
+Azure agrupa las regiones en pares con el fin de que puedan ser fault tolerance
+y que si una region esta siendo actualizada o en mantenimiento no sufras dichos 
+downtimes. Normalmente estas regiones estan separados 500 km
+:::
+
+### Region Types 
+No todos los servicios de azure estan disponibles en todas las regions 
+
+- Recomended regions: Tiene la mayor cantidad de servicios dentro de azure tiene 
+availability zones
+
+- alternate regions: No estan diseñadas para tener AZs extienden el footprint de servicios de 
+azure
+
+Tenemos un concepto llamado GA, es cuando un servicios es considero listo para ser 
+consumido por el publico.
+
+Tenemos 3 tipos de categorias para los servicios
+- Foundational
+- Mainstream
+- Specialized
+
+:::tip
+Azure tiene algunas regios especiales con el fin de cumplir algunos acuerdos 
+legales.
+:::
+
+## Availability Zone (AZ)
+Es una ubicacion fisica que tiene uno o mas datacenters
+
+Una region tiene normalmente 3 AZs, hay algunos casos que tienen menos 
+Cada datacenter esta isolado por un edificio fisico pero estan lo suficientemente 
+alejado para tener baja latencia
+
+### Availability Set (no lo tengo claro)
+
+**Fault Domain**
+Es la forma en la que realizamos las agrupaciones del hardware con el fin de evitar 
+single point of failure. Comparten el power supply y el switch
+
+**Update Domain**
+Azure necesita realizar actualizaciones o mantenimiento en su hardware es por esta razon 
+que los update domain aseguran que no tengas downtimes
+
+**Availability Set**
+es la forma logica de agrupar los recursos para que las vms no esten en el mismo Fault/Update 
+domain y no sufrir downtimes
+
+## Compute services
+
+- Azure virtual machines: el mas sencillo de todos tenemos maquinas virtuales que podemos usar
+
+- Azure container instances: Desplegar imagenes de docker sin provisionar servidores
+
+- Azure kubernetes services: facil de desplegar, manejar y monitorear clusters de kubernetes
+
+- Azure services fabric: PLataforma para sistemas distribuidos hecha para microservicios 
+
+- Azure functions: Serverless subimos funciones de programacion, son basadas en eventos y solo pagamos el tiempo 
+que la funcion se esta ejecutando
+
+- Azure batch: Para crear un batch de maquinas virtuales y ejecutar nuestras cargas de trabajo en un tiempo 
+determinado
+
+## Storage services 
+
+- Azure blob storage: Para guardar data no estructurada, archivos bastante largos y que voy a acceder con relativa 
+frecuencia 
+
+- Azure disk storage: Discos duros SSD o HDD que puedo acoplar a las VMs 
+
+- Azure file system: Una nas, sistema de almacenamiento de la informacion, puedo conectar distintas vms a ese file system
+
+- Azure queue storage: Cola de mensajes para comunicar dos apliaciones entre si
+
+- Azure table storage: Widecolumn noSQL almacena data no estructurada sin necesidad de un schema
+
+- Azure data box: Diseñado para mover petabytes de informacion
+
+- Azure archive storage: Lugar para almancenar informacion que no consumimos una vez cada año es el almacenamiento 
+mas barato 
+
+- Azure data lake storage: Un lugar para centralizar data estructurada y no estructurada a cualquier escala
+
+## Database Services
+
+- Azure cosmos db: Base de datos noSQL diseñada para escalar con 99.999% de disponibilidad
+
+- Azure sql database: auto manejada ms sql database
+
+- Azure database for Mysql/Postgres/Mariadb: 
+
+- sql server on vms
+
+- azure synapse analytics
+
+- azure database migration services
+
+- azure cache for redis 
