--- a/docs/az/az-900.md
+++ b/docs/az/az-900.md
@@ -96,9 +96,9 @@ frecuencia
 
 - Azure file system: Una nas, sistema de almacenamiento de la informacion, puedo conectar distintas vms a ese file system
 
-- Azure queue storage: Cola de mensajes para comunicar dos apliaciones entre si
+- *Azure queue storage (application integration): Cola de mensajes para comunicar dos apliaciones entre si
 
-- Azure table storage: Widecolumn noSQL almacena data no estructurada sin necesidad de un schema
+- *Azure table storage (database): Widecolumn noSQL almacena data no estructurada sin necesidad de un schema
 
 - Azure data box: Diseñado para mover petabytes de informacion
 
@@ -111,14 +111,192 @@ mas barato
 
 - Azure cosmos db: Base de datos noSQL diseñada para escalar con 99.999% de disponibilidad
 
-- Azure sql database: auto manejada ms sql database
+- Azure sql database: auto manejada base de datos ms sql, alta seguridad y autoescalamiento
 
-- Azure database for Mysql/Postgres/Mariadb: 
+- Azure database for Mysql/Postgres/Mariadb: Base de datos con alta seguridad, autoescalamiento 
+para postgress, mysql y mariadb
 
-- sql server on vms
+- sql server on vms: Sql server para empresas, perfecto para migrar tus sql server on premises 
+a la nube
 
-- azure synapse analytics
+- azure synapse analytics: Data warehouse automanejado 
 
-- azure database migration services
+- azure database migration services: Servicio para migrar tus bases de datos sin cambios en el 
+codigo
 
-- azure cache for redis 
+- azure cache for redis: Base de datos en memoria para disminuir latencia en las aplicaciones
+
+## Aplication integration Services
+
+- Azure notification hub: el pub/sub para comunicar servicios
+
+- Azure api apps: esto es un api gateway, una forma facil de crear api y consumirlas en la nube
+
+- Azure services bus: Services bus un MaaS
+
+- Azure stream analytics: Analiticas en tiempo real de forma serverless
+
+- Azure logic apps: Organizador de tareas con el puedes orquestar y automatizarlas
+
+- Azure api management: Le agrega funcionalidades extras a tus apis
+
+## Developer and mobile tools
+
+- Azure signalR service: Mensajeria en tiempo real, el pusher de azure.
+
+- Azure app services: el heroku de microsoft, una forma facil de desplegar las aplicaciones
+
+- Visual studio: Editor de texto
+
+- Xamarin: el react native de microsoft, sirve para hacer apps cross platform (ios, android, web)
+
+## Azure devops services 
+
+- Azure devops: Diferentes servicios para los devops
+ 
+- Azure boards: un kanban board con metricas
+
+- Azure pipelines: CI/CD para cualquier repositorio
+
+- azure repos: un source control de forma privada
+
+- azure test plan: una forma de automatizar el qa
+
+- azure artifacts: una forma de compartir los artefactos creados por los CI/CD
+
+- azure devtest labs: forma facil de conectarse a los diferentes ambientes
+
+## Azure Resource Manager (ARM)
+
+Es una forma de tener la infraestructura como codigo, de modo que podamos 
+crear siempre lo mismo a partir de un script. Usamos el lenguaje JSON
+para crear dichos scripts. 
+
+### Azure quickstart templates 
+
+Son los ARM templates que la comunidad ya a hecho con el fin de reutilizarlo
+y no empezar de 0. Tenemos estos templates para cosas basicas, como crear una 
+base de datos de postgres o levantar una vpn con subnets dentro.
+
+## Azure Virtual network (vNet)
+
+Las virtual networks en azure, son redes isoladas donde podemos 
+lanzar nuestros servidores o servicios. Generalmente usan mascara 16
+
+### Subnets 
+
+Son un subgrupo isolado dentr de las virtual network, generalmente 
+usan mascara 24. las subnets publicas son las que podemos conectarnos a internet 
+las privadas son las que no tienen acceso a internet
+
+## Azure networking services
+
+- Azure dns: basicamente es un DNS server, solo podemos manejarlos no comprarlos
+
+- Azure virtual network: redes privadas de azure donde podemos lanzar 
+nuestras aplicaciones
+
+- Azure load balancer: load balancer de capa 4 podemos crear load balancer publicos 
+y privados, la diferencia es que uno tiene acceso a internet y el otro no
+
+- Azure aplication gateway: load balancer de capa 7
+
+- Network security groups: firewall para proteger nuestras aplicaciones a nivel 
+de subnet
+
+- scale sets: Es una forma para aumentar o disminuir nuestro poder computacional basada
+en una regla.
+
+### Enterprise
+
+- Azure front door: una punto de acceso para las aplicciones desplegadas globalmente
+
+- Azure express route: una conexion dedicada entre los servidores on premise y azure 
+tiene un ancho de banda de 50Mbps hasta 10Gbps
+
+- Virtual WAN: Una forma de empaquetar diferentes redes en azure para que sean una sola
+
+- Azure connection: Conexion vpn para conectar dos redes en azure
+
+- Virtual netowrk gateway: Conexion vpn para conectar una red on premise y una subnet azure
+virtual network
+
+### Azure traffic manager 
+
+Es una forma en el que podemos manejar nuestro trafico dentro azure, es decir, 
+si tenemos la aplicacion de produccion y una aplicacion con nuevos features
+y que los usuarios puedan experiementar dichos features podemos routear el trafico 
+para que el 20% vaya a los nuevos features y el otro 80 a la aplicacion normal 
+
+## IOT services
+Iot son objetos conectados a internet con ellos podemos recibir informacion y manipularla
+
+- IoT central: nos permite conectar nuestros dispositivos a la nube
+
+- IoT Hub: Comunicacion entre nuestras aplicacion y dispoitivos
+
+- IoT Edge: Procesamiento de la informacion y analiticas de nuestros dispositivos
+con el que podemos hacer edge compunting. Donde realizamos todos los calculos on premise 
+y luego subimos a la nube
+
+## Big data services
+
+- Azure synapse analytics: es un data warehouse donde puedes ejecutar queries de sql
+los cuales usamos para generar reportes.
+
+- HDInsight podemos ejecutar hadoop, spark, o kafka
+
+- Azure databricks: Databricks como servicio, tambien podemos ejecutar nuestros 
+cluster de spark
+
+- Data lake analytics: Aqui podemos almacenar la data cruda para despues procesarla. tiene 
+un servicio on demand para realizar analiticas
+
+## Machine learning services
+
+- Azure machine learning services: una forma de ejecutar nuestros modelos o pipelines 
+en la nube de azure de forma que usemos python o R
+
+- Personalizer: Experencias personalizadas para cad usuario
+
+- Translator: para agregar traducciones de texto a nuestras aplicaciones
+
+- Anomaly detector: detectar anomalias en la data para arreglar las issues
+
+- azure bot services: bot serverless e inteligente que escala on demand
+
+- form recogniser: Extraccion de texto automatizada
+
+- computer vision: modelos de computer vision
+
+- language understanding: Modelos de nlp para nuestras aplicaciones
+
+- QnA maker: Bot que genera conversaciones de pregunta y respuesta
+
+- Text Analytics: Extrae informacion de los textos, sentimientos, palabras claves, etc.
+
+- Content moderator: Modula el lenguaje para proveer una experiencia de usuario mejor.
+
+- Face: Detecta e identifica a las personas de las fotos
+
+- ink recogniser: Reconoce contenido en manuscrito
+
+## Serverless services
+
+- Azure functions: Ejecuta bloques de codigo de forma serverless en los lenguajes ams comunes
+
+- Blog store: Para almacenar informacion como google drive
+
+- logic apps: nos permite conectar diferentes azure functions para armar aplicaciones que 
+preservan el estado 
+
+- event grid: Usa pub/sub para reaccionar a los eventos y poder ejecutar azure functions
+
+## Azure portal 
+
+Es una forma web para poder interactuar con nuestros servicios en la nube, de tal forma, que tenemos 
+un control grafico de los recursos que provisionamos.
+
+Podemos usar features nuevas usando preview.portal.azure.com
+
+Tambien podemos usar la version estable usando portal.azure.com
