--- a/docs/az/az-900.md
+++ b/docs/az/az-900.md
@@ -9,7 +9,7 @@ sidebar_position: 1
 Una region es un grupo de multiples datacenters cada datacenter se lo conoce como 
 un availability zone. 
 
-En total azure tiene 58 regiones en 140 paises
+En total azure tiene 60 regiones en 140 paises
 
 Por otro lado las geografias son un mercado conformado de 2 o mas regiones 
 que preserva el estado de la informacion y los limites de confianza
@@ -71,11 +71,58 @@ que los update domain aseguran que no tengas downtimes
 es la forma logica de agrupar los recursos para que las vms no esten en el mismo Fault/Update 
 domain y no sufrir downtimes
 
+## Azure resource group 
+
+Un resource group es una forma de manejar tus recursos como una sola entidad de forma que tengas mas control 
+y orden de la infraestructura que se provisiona, es decir, es un contenedor en donde podemos agregar y 
+manejar los recursos necesarios para nuestro caso de uso en una sola unidad. De esta forma podemos manejar 
+las aplicaciones y no manejamos los componentes de las aplicaciones. 
+
+Antes de poder provisionar cualquier recurso en la nube necesitamos agregarlo a un resource group 
+
+:::warning
+Cuando eliminamos un resource group eliminamos todos los recurso que contiene
+:::
+
+Tenemos que tener en cuenta las siguientes reglas para los resource group:
+
+1. Cada recurso debe ser unico en el resource group
+2. Un recurso solo puede existir en un resource group 
+3. Un resource group puede contener recursos que existen en otras regiones 
+4. El usuario decide que recursos quiere que pertenezcan a cada grupo 
+dependiendo de que le haga mas sentido para su caso de uso
+5. Podemos agregar y eliminar recursos en cualquier momento
+6. Podemos mover recursos de un resource group a otro sin problemas
+7. Recursos para una aplicacion no es necesario que pertenezcan al mismo 
+resource group pero es recomendable que si lo haga con el fin de que sea 
+mas facil manejar la aplicacion
+
+### Azure Resource Manager (ARM)
+
+Es una forma de tener la infraestructura como codigo, de modo que podamos 
+crear siempre lo mismo a partir de un script. Usamos el lenguaje JSON
+para crear dichos scripts. 
+Ademas tenemos las siguiente funciones principales 
+
+1. Deployar recursos de las aplicaciones 
+2. Organizar recursos 
+3. Controlar el accesso a nuestros recursos 
+
+#### Azure quickstart templates 
+
+Son los ARM templates que la comunidad ya a hecho con el fin de reutilizarlo
+y no empezar de 0. Tenemos estos templates para cosas basicas, como crear una 
+base de datos de postgres o levantar una vpn con subnets dentro.
+
+
 ## Compute services
+Azure compute es un servicio de computacion bajo de manda para ejecutar 
+nuestras aplicaciones basadas en la nube. Provee de recursos como discos duro, memoria, 
+procesadores, sistemas operativos, etc. 
 
-- Azure virtual machines: el mas sencillo de todos tenemos maquinas virtuales que podemos usar
+- Azure virtual machines*: el mas sencillo de todos tenemos maquinas virtuales que podemos usar
 
-- Azure container instances: Desplegar imagenes de docker sin provisionar servidores
+- Azure container instances*: Desplegar imagenes de docker sin provisionar servidores
 
 - Azure kubernetes services: facil de desplegar, manejar y monitorear clusters de kubernetes
 
@@ -86,6 +133,10 @@ que la funcion se esta ejecutando
 
 - Azure batch: Para crear un batch de maquinas virtuales y ejecutar nuestras cargas de trabajo en un tiempo 
 determinado
+
+:::note 
+Los servicios con un * son los mas utilizados por los clientes 
+:::
 
 ## Storage services 
 
@@ -166,17 +217,7 @@ codigo
 
 - azure devtest labs: forma facil de conectarse a los diferentes ambientes
 
-## Azure Resource Manager (ARM)
 
-Es una forma de tener la infraestructura como codigo, de modo que podamos 
-crear siempre lo mismo a partir de un script. Usamos el lenguaje JSON
-para crear dichos scripts. 
-
-### Azure quickstart templates 
-
-Son los ARM templates que la comunidad ya a hecho con el fin de reutilizarlo
-y no empezar de 0. Tenemos estos templates para cosas basicas, como crear una 
-base de datos de postgres o levantar una vpn con subnets dentro.
 
 ## Azure Virtual network (vNet)
 
@@ -300,3 +341,4 @@ un control grafico de los recursos que provisionamos.
 Podemos usar features nuevas usando preview.portal.azure.com
 
 Tambien podemos usar la version estable usando portal.azure.com
+
