feat: Implement final notes for az-900

--- a/docs/az/az-900.md
+++ b/docs/az/az-900.md
@@ -218,19 +218,31 @@ codigo
 - azure devtest labs: forma facil de conectarse a los diferentes ambientes
 
 
+## Azure networking
 
-## Azure Virtual network (vNet)
+### Azure Virtual network (vNet)
 
 Las virtual networks en azure, son redes isoladas donde podemos 
-lanzar nuestros servidores o servicios. Generalmente usan mascara 16
+lanzar nuestros servidores o servicios de forma segura. Generalmente usan mascara 16
 
-### Subnets 
+Una vNet pertenece a una region, si tenemos varias vNets en distintas regiones 
+las podemos comunicar usando virtual network peering.
+
+Con este servicio tenemos:
+
+- isolation 
+- communication with on prem y cloud resources
+- routing 
+- filtering of network traffic
+- segmentation 
+
+#### Subnets 
 
 Son un subgrupo isolado dentr de las virtual network, generalmente 
 usan mascara 24. las subnets publicas son las que podemos conectarnos a internet 
 las privadas son las que no tienen acceso a internet
 
-## Azure networking services
+### Services
 
 - Azure dns: basicamente es un DNS server, solo podemos manejarlos no comprarlos
 
@@ -248,6 +260,9 @@ de subnet
 - scale sets: Es una forma para aumentar o disminuir nuestro poder computacional basada
 en una regla.
 
+- azure CDN: Una forma de incrementar la velocidad de nuestro contenido estatico a nuestros 
+usuarios
+
 ### Enterprise
 
 - Azure front door: una punto de acceso para las aplicciones desplegadas globalmente
@@ -260,7 +275,7 @@ tiene un ancho de banda de 50Mbps hasta 10Gbps
 - Azure connection: Conexion vpn para conectar dos redes en azure
 
 - Virtual netowrk gateway: Conexion vpn para conectar una red on premise y una subnet azure
-virtual network
+virtual network para que se comuniquen de forma segura y encriptada
 
 ### Azure traffic manager 
 
@@ -342,3 +357,240 @@ Podemos usar features nuevas usando preview.portal.azure.com
 
 Tambien podemos usar la version estable usando portal.azure.com
 
+## Security
+
+### Azure security center 
+
+Es un dashboard que nos permite que tan seguros son nuestros sistemas, es decir, si cumplimos con 
+las politicas de seguridad, algunas recomendaciones para mejorar dicha seguridad, etc.
+
+### Key Vault 
+Nos permite manejar de forma segura nuestros certificados, secrets, y keys dentro de los servicios 
+en nube.
+
+tenemos los siguientes funcionalidades:
+- Secrets Management: Aqui podemos guardar Contraseñas, keys, tokens, certificados, etc.
+- Key Management: Podemos crear y manejar las llaves encriptadas que usamos para encriptar la informacion
+- Certificate Management: podemos provisionar, manejar, desplegar certificados publicos y privados para SSL
+- Hardware Security Module: Secrets y keys las protegemos tanto por software y por FIPS 140-2 Level 2
+
+:::note
+HSM (Hardware security module) es un pieza de hardware diseñada para almacenar nuestras claves de encriptacion
+es como una memoria ram debido a que guarda la informacion en memoria si se apaga la informacion de pierde.
+
+FIPS Es un standard de seguridad informatica, estos modules cumplen con dicho estandar
+:::
+
+### Azure DDOS protection
+Es un servicio que ofrece azure para protegernos de los ataque DDoS, tiene dos tiers:
+
+- Free: el cual ya automaticamente lo tenemos y nos protege en la red de azure
+- Protection Standard: este cuesta desde 2994 mensuales, metricas, alertas, reportes, expert 
+support, sino se pudo prevenir el ataque azure te ayuda de forma economica con creditos
+
+### Azure firewall 
+es el punto de entrada a nuestras redes y servicios en azure con la cual podemos filtrar el trafico
+y protegernos
+
+### Azure Advance Threat Protection (ATP)
+IDS es Intrusion Detection System mientras que IPS Intrusion Protection System, son dispositivos o 
+programas que estan monitoreando una red o un sistema contra ataques maliciosos o violaciones de 
+politicas. 
+
+ATP es un sistema basado en cloud que monitorea las señales de Active directorie en tu sistema on premise con el fin de 
+detectar, identificar, e investigar atacantes o posibles programas maliciosos.
+
+### Microsfot security development Lifecycle (SDL)
+Es un modelo que podemos utilizar para desarollar nuestros sistemas o aplicaciones en la nube de forma segura 
+Cuenta con varias fases las cuales son:
+
+1. Training
+2. Requirements
+3. Design
+4. Implementation
+5. Verification
+6. Release
+7. Response
+
+Entre mas rapido o en las partes mas iniciales implementemos seguridad, mas facil sera implementarlos 
+en etapas mas avanzadas y por ende mas seguro sera el sistema.
+
+### Azure Policies
+
+Es un servicio en el cual podemos crear, manejar y asignar diferentes politicas. Las politicas 
+nos ayudan a controlar las propiedades o comportamientos de los recursos seria mas o menos como 
+los permisos.
+
+#### Role Base Access Control (RBAC)
+Nos ayuda a manejar lo siguiente:
+
+1. Quien tiene accesso a los recursos (Security Principal), podemos tener:
+    - Usuario
+    - Grupos de usuarios 
+    - service principal (aplicaciones)
+    - Managed identity (las manejas en el azure directory)
+
+2. Que puede hacer con esos recursos (Role definition) que operaciones podemos realizar:
+    - Read
+    - write
+    - delete
+
+3. Cuales recursos tengo disponibles (Scope):
+    - Management group scope (el mas general)
+    - Subscription scope 
+    - resource group scope (el menos general) 
+
+:::tip
+Azure presenta roles pre definidos pero tambien podemos crear nuestros propios roles
+:::
+
+:::note
+Los roles pre definidos que tiene azure son:
+- Owner
+- Contributor
+- Reader
+- User access administrator
+:::
+
+#### Bloquear recursos 
+
+En azure podemos bloquear ciertos recursos con el fin de no cometer accidentes en recursos 
+importantes por ejemplo eliminarlos.
+
+Tenemos 2 tipos de bloqueo:
+
+1. CanNotDelete: Podemos hacer todo con el recuro (read, update, get) pero no borrarlo
+
+2. ReadOnly: Solo podemos obtener el recurso, es decir, verlo pero nada mas 
+
+### Management Groups
+Son una forma de manejar multiples suscripciones de una forma jerarquica.
+
+### Azure Monitor
+Es una solucion que azure ofrece para recolectar, analizar, la informacion de nuestros 
+servicios en la nube
+Podemos crear lo siguiente:
+- dashboards
+- alertar inteligentes
+- Acciones automatizadas
+- monitoreo de logs
+
+### Service Health
+Es un servicio de azure que podemos usar para monitorear la salud de infraestructura 
+donde tenemos alojada nuestras aplicaciones o sistemas aqui podemos revisar:
+
+### Azure advisor
+Es nuestro consultor especializado de azure, el cual nos da recomendaciones para mejorar
+nuestros sistemas en las siguientes categorias:
+
+1. High Availability
+2. Security 
+3. Performance 
+4. Cost
+5. Operational excellence
+
+## Billing
+
+### Service Level Agreement
+Son compromisos que tiene azure con sus clientes la mayoria tiene que ver con:
+tiempo de conexion y disponibilidad del servicio. 
+
+En disponibilidad de servicio buscamos tener nueve 9 (99.9999999%). 
+
+Los SLA solo los tenemos en las versiones pagadas, si usamos Azure free tier
+Azure no se compromete en nada.
+
+Estos SLA lo tiene todos los servicios de azure
+
+### Service Credits
+Es una compesacion que reciben los clientes de parte de azure, si Azure incumple 
+con alguno de sus SLA
+
+### Composites SLA
+Como todos los servicios dentro de azure tienen diferentes SLA, y un sistema tiene 
+varios servicios comunicandose entre si. Si nosotros queremos saber el SLA de nuestro 
+sistema como tal debemos multiplicar los porcentajes debido a que los tenemos en serie 
+uno detras de otro.
+
+:::tip
+Una forma de incrementar nuestro SLA es tener redudancia o tener sistemas en paralelo
+por lo cual los porcentajes no se multiplicarian sino que se sumarian.
+:::
+
+### TCO Calculator
+Esta herramienta nos ayuda a saber cuanto dinero nos ahorramos al realizar la migracion 
+a Azure. Esta informacion nos puede ayudar a tomar las decisiones o enviarselas a nuestros 
+jefes con el fin de que sepan si es significativo o no movernos a la nube.
+
+Podemos usar el siguiente [enlace](https://azure.microsoft.com/en-us/pricing/calculator/) para usar la calculadora
+
+### Azure Marketplace
+Es un lugar donde podemos encontrar aplicaciones creadas por terceros que podemos usar con el fin de 
+ahorrarnos tiempo e implementar mas rapido.
+
+tenemos 4 tipos de apps que podemos encontrar:
+- free
+- free tier
+- pay as you go
+- bring your own license
+
+### Azure Support Plan
+
+Existen 4 planes importantes para azure:
+
+1. Basic
+    - Tenemos asistencia por email pero solo en temas de billing y cuenta
+    - es gratis 
+2. Developer
+    - Tenemos asistencia tecnica por email
+    - Tenemos asistencia tenica en third party software
+    - tenemos un tiempo de respuestas de unas 8 horas
+    - Tenemos guias que nos ayudaran a crear nuestra arquitectura
+    - cuesta 30 dolares mensuales
+3. Standard
+    - Todo lo que tiene el developer
+    - Asistencia telefonica 24/7
+    - Para issues de categoria b tenemos un tiempo de respuesta de 4 horas
+    - Para issues criticas tenemos un tiempo de respues de 1 hora
+    - cuesta 100 dolares mensuales 
+4. Profesional direct
+    - Todo lo que tiene el standard
+    - Tenemos un equipo de arquitectos de azure que nos ayudaran a mejorar nuestro sistema 
+    - Invitacion a webinars liderados por los ingenieros de azure
+    - Cuesta 1000 dolares mensuales
+
+### Azure licensing
+Debido a que hay muchas empresas que cuentan con licensias de sql server o windows server.
+Azure permite usar dichas licensias en sus vm o databases con el fin de reutilizar una licensia 
+que ya hemos pagado.
+
+### Azure subscriptions
+Viene a ser el tipo de cuenta de azure que tenemos, la cual existen 4 tipos:
+
+1. Free Subscription
+    - Necesitas tarjeta de credito
+    - algunos recursos de azure gratis por 12 meses
+    - 200 dolares en creditos por un mes 
+
+2. PAY - AS - YOU - GO
+    - Tarjeta de credito
+    - Pagas lo que consumas en el mes
+
+3. Enterprise
+    - Como empresa puedes hablar con azure para que te den descuento
+
+4. Student
+    - no necesitas tarjeta de credito 
+    - 100 dolares en creditos por 12 meses
+    - necesitas un correo valido de estudiante .edu
+
+### Pricing Calculator
+Es una forma de estimar cuanto sera nuestro costo mensual por usar ciertos recursos de azure
+
+:::tip
+Podemos usarla para descargar un ez
+:::
+### Azure cost Manager 
+con este servicio podemos realizar un analisis de cuanto se gasta y en que recursos se gastan 
+ademas de poder crear un presupuesto y agregarle alertas a dicho presupuesto para que nos avise 
+en el mes cuanto porcentaje ya vamso gastando.
