feat: dp-900 notes v2

--- a/docs/az/dp-900.md
+++ b/docs/az/dp-900.md
@@ -187,10 +187,310 @@ Un caso de eso para esta funcionalidad es para hacer analitica
 :::
 
 ### Citus
+Es una extesnion de postgress que podemos usar para convertir postgress en una base 
+de datos distribuida con los siguientes beneficios:
+
+1. Database sharding 
+2. Realtime Queries
+3. Multi-Tenany
+4. Time series workloads
+
+:::tip
+Podemos usar esta extension en azure con la opcion de `HyperScale deploy`
+:::
+### SQL Virtual Machine
+(IaS)Es basicamente levantar una maquina virtual en la nube e instalar SQL server.
+Este servicio de azure lo vamos a usar en los siguientes escenarios:
+
+1. Cuando queremos hacer un lift and shift de la infraestructura
+2. Cuando necesitamos tener control a nivel de sistema operativo
+3. Cuando tenemos licencias de sql server on premises (podemos hacer uso Azure Hybrid benefit)
+
+### SQL Managed Instance
+Es un platform as a services donde podemos tener una base de datos
+
+Este servicio lo usaremos cuando:
+
+1. Cuando queremos modernizar nuestra db
+2. Ideal para la mayoria de casos de migracion a la nube
+3. High availability, disaster recovery, automated backups
+4. Cuenta con bastante compatibilidad con otros servicios
+
+### SQL Database
+(PaS)Es una instancia de sql manejada automaticamente por azure. Ellos se encargan de todo 
+pero no tenemos control del algunas cosas. Por ejemplo, el sistema operativo
+
+Lo usaremos cuando:
+1. Cuando queremos tener un sistema fault-tolerance
+2. Diseñada para ser disaster recovery
+3. Diseñada para escalar.
+4. Corre en una elastic pool 
+
+:::tip
+Elastic Pools
+Es un servicio de azure que nos permite escalar nuestras bases de datos en base a la 
+demanda de las aplicaciones. Ideal para cargas de trabajo impredecibles
+:::
+
+### T-SQL
+Viene de Transact-SQL. Es un conjunto de extensiones con el fin de agregar funcionalidades a
+SQL, basicamente SQL con esteroides.
+
+Con T-SQL podemos hacer lo siguiente:
+- todo lo que podemos hacer con SQL
+- Operaciones matematicas
+- Programacion en secuencial 
+- variables locales
+- funciones para procesar strings 
+- Procesamiento de fechas
+- Cambios en DELETE y UPDATE
+
+En SQL tenemos 5 grupos principales de tipos de comandos
+- DDL (Data Definition Language): Lo usamos para definir esquemas 
+- DQL (Data Query Language): Lo usamos para realizar queries en la data
+- DML (Data Manipulation Language): Manipulacion de la data 
+- DCL (Data Control Language): Permisos y roles en la db
+- TCL (Transaction Control Language): Controlar las transaciones en la db
+
+#### DDL (Data Definition Language)
+Lo usamos para interactuar con el esquema. Podemos crear o modificar elementos 
+de la base de datos o la base de datos. 
+
+Principales comandos:
+- CREATE: Crea bases de datos o elementos en las bases de datos 
+- ALTER: Cambiar la estructura de la base de datos. Por ejemplo agregar un campo a una tabla
+- DROP: Elimina base de datos o elementos en las bases de datos
+- TRUNCATE: Elimina los registro de una tabla 
+- COMMENT: Agrega comentarions lo hacemo con `--`
+- RENAME: Cambiamos el nombre de un objeto de la db
+
+#### DML (Data Manipulation Language)
+Manipulacion de la data 
+
+Principales comandos:
+- INSERT: Insertamos data a una tabla
+- UPDATE: Actualizamos data en una tabla
+- DELETE: Eliminamos registros de una tabla
+- MERGE-UPSERT: Agregar y actualizar registros en una tabla
+- CALL: Ejecutar una function en PL/SQL o Java
+- LOCK TABLE: Control de concurrencia para asegurar que dos personas no estan ejecutando programas 
+al mismo tiempo
+
+#### DQL (Data Query Language)
+
+Principales comandos:
+- SELECT: Seleciona data de una tabla 
+- SHOW: Describe como luce una tabla
+- EXPLAIN PLAN: Executa el query plan de un comando sin ejecutarlo (para saber cuantos recursos necesita)
+- HELP: Nos da informacion sobre el objeto o la db
+
+#### DCL (Data Control Language)
+
+Principales comandos:
+- GRANT: Permite agregar privilegios a distintos usuarios
+- REVOKE: Permite remover privilegios a usuarios
+
+#### TCL (Transaction Control Language)
+Lo usamos para manejar las transaciones dentro de una base de datos. 
+Esto es especialmente util cuando hacemos multiples cambios en la db y si uno de los cambios 
+falla regresar al estado anterior (rollback).
+
+Principales comandos:
+- COMMIT: Guardar la transacion en la db
+- ROLLBACK: Restaurar la db al ultimo commit 
+- SAVEPOINT: Guardar un estado de la base de datos para regresar cuando sea necesario
+- SET TRANSACTION: Especificar las caracterisiticas de las transacciones
 
 ## Database Security
 
+### Connectivity Architecture
+Cuando nos conectamos desde un servidor hacia una SQL database. Debemos tomar en cuenta 
+lo siguiente:
+
+1. Debemos conectarno en el puerto 1443
+2. Nos conectamos a un gateway
+
+Basado en la politica de conexion el gateway nos redigira a la base de datos correspondiente
+
+Temos 3 tipos de conection policy:
+
+1. Proxy: Para servicios fuera de azure, mayor latencia y menor rapidez
+2. Redirect (recomendada): Para servicios internos de azure, menor latencia y mas rapidez
+3. Default: Esta automatiamente se setea entre proxy o redirect dependiendo de la carga 
+
+### Database Authentication
+Tenemos 2 modos de autenticacion:
+1. Windows authentication: habilita windows authentication y inhabilita SQL server authentication
+2. Mixed Mode: habilita windows authentication y habilita SQL server authentication
+
+Windows authentication (recomendada)
+- Solo permite el acceso a usuarios de windows especificos
+- es la mas facil de administrar y mas segura
+
+SQL server authentication
+- usuario y contraseña almacenados en la base de datos
+- No podemo usar Kerberos como protocolo de seguridad 
+- Las claves se deben agregar al momento de establecer la conexion (punto para ser atacados)
+- la mas facil cuando queremos conectar aplicaciones
+
+### Network Connectivity
+Podemos escoger entre public y private endpoints:
+
+#### Public endpoint
+Los podemos alcanzar fuera de la red de azure usando internet
+
+:::caution
+Debemos usar firewalls para proteger nuestra base de datos
+:::
+
+#### Private endpoint
+Solo podemos alcanzarlo dentro de la red de azure
+
+:::caution
+Debemos usar private links para mantener el trafico dentro de la red de azure
+:::
+
+### Azure Defender for SQL
+Es un servicio de seguridad de azure con el cual podemos encontrar y clasificar informacion sensible,
+ademas podemos detectar actividades anormales y mitigar vulnerabilidades
+
+Este servicio lo tenemos disponible en:
+- SQL Database
+- SQL Managed instances
+- Synapse analytics 
+
+### Azure Database Firewalls Rules 
+La bases de datos de azure estan protegidas por reglas de firewalls en los servidores.
+Los cuales nos permiten controlar el trafico que llega a nuestra base de datos. 
+
+:::warning
+Por defecto todas las conexiones son rechazadas
+:::
+
+:::tip
+Una forma de proteger nuestra informacion sensible es con llaves de encriptacion. Con azure podemos
+encriptar solo una columna o varias con la misma llave de encriptacion.
+:::
+
+### RBAC (Role Base access control)
+Tenemos 4 roles importantes que podemos usar para garantizar que cada persona tiene 
+la cantidad suficiente y necesaria de permisos.
+
+- SQL DB contributor
+    - Manejar SQL DB pero no acceder a ellas 
+    - No podemos manejar security policies
+
+- SQL Managed Instance Contributor
+    - Manejar SQL Managed instances y configuracion de redes necesarias
+    - No podemos dar accesos a otras personas
+
+- SQL Security Manager
+    - No podemos acceder a los servidores de sql 
+    - Manejamos security polices
+
+- SQL Sever Contributor
+    - Manejar SQL server y db
+    - Pero no podemos acceder a los SQL servers
+
+### Transparent Data Encryption (TDE)
+Encripta la data de forma automatica. Para llevar acabo esta tarea usa una DEK(database encription key)
+que es un llave simetrica
+
+Este feature de azure lo podemos aplicar en:
+- SQL Server
+- SQL Database
+- Synapse Analytics
+
+Para poder hacer uso de esta funcionalidad necesitamos completar los siguientes pasos:
+
+1. Crear una Database master key
+2. Crear un certificado para el TDE
+3. Crear un DEK
+4. Habilitar TDE en la base de datos
+
+:::note
+Una llave simetrica quiere decir que es una llave que se usa tanto para encriptar un texto plano 
+como para desencriptar un texto cifrado
+:::
+
+### Dynamic Data Masking
+Data masking es la habilidad de enmascarar cierta informacion sensible. Por ejemplo, 
+si tenemos un numero de tarjeta de credito 0923123123123 en vez de mostrarlo todo 
+lo que pasa es xxxxxxxxx123 con el fin de no tener acceso a esta informacion. La informacion 
+en la base de datos permanece intacta pero al momento de consultar pasa por una funcion 
+que transforma (enmascara) dicha informacion.
+
+Este feature lo tenemos disponible en:
+- SQL Database
+- SQL Managed Instance
+- Synapse Analytics
+
+Ademas podemos crear politicas que nos permitan:
+- Decir que usuarios se les aplica el enmascaramiento y a quienes no 
+- Que campos debemos enmascarar
+- Como vamos a enmascarar dichos campos
+
 ## No Relational DB
+
+### Key Value Store 
+Este tipo de base de datos no relacional, es bastante pero bastante rapida y facil de 
+escalar por su simplicidad de que tiene una llave primaria unica y un valor que para 
+sacar el mayor provecho es un diccionario, con esto conseguimos tener varios campos 
+en un solo valor.
+
+Carece de ciertas funcionalidades como:
+- Relationships 
+- Indexes
+- Aggregations
+
+### Document Store
+Es otro tipo de base de datos no relacional. Su principal estructura de datos es documents
+en los que podemos almacenar XML pero el mas comun de usar es JSON.
+
+Tiene muchas similitudes con una base de datos relacion sin las restricciones del schema.
+
+Database -> Database
+Collection -> Table 
+Documents -> Rows
+Fields -> Columns
+Indexes -> Indexes
+Linking -> Joins
+
+#### MongoDB
+Es una base de datos no relacional de tipo documento que usa JSON pero su 
+principal estructura de datos es BSON
+
+Tienes las siguientes caracteristicas:
+- Podemos realizar busquedas atraves de campos, expresiones regulares, queries
+- Soportar primary and secundary indexes
+- Es high availability por medio de replicas set
+- Escala horizontalmente usando sharding
+- Podemos ejecutarlo en multiples servers por medio de un balanceador de carga 
+- Podemos usarlo como file system por medio de GridFS
+- Tenemos 3 formas de realizar aggregations (aggregation pipelines, map-reduce, single-purpose)
+- Podemos tener coleciones de de tamaño fijo
+- Soporta Transacciones ACID 
+
+:::note
+BSON es Binary Json y cuenta con las siguientes caracteristicas:
+- Bastante similar a JSON
+- Esta diseñado para ser mas eficiente que JSON en velocidad y storage 
+- BSON tiene mas tipos de datos que JSON no tiene por ejemplo:
+    - DateTime
+    - Expresiones regulares
+    - Bytes expressions
+    - Codigo de js
+:::
+
+### Graph Database
+Es una base de datos no relacion que se compone por una estructura de nodos y relaciones 
+con otros nodos.
+
+Casos de uso:
+- Deteccion de fraude
+- Recomendaciones en tiempo real 
+- Operaciones de red e IT
+- Master data managment
 
 ## Big data systems
 
