fix: son blank spaces

--- a/docs/az/dp-900.md
+++ b/docs/az/dp-900.md
@@ -146,6 +146,7 @@ lo llamamos mounting
 - hacer lift-shift
 - Simplificar los ambientes de nube
 - contenedores
+
 :::note
 - lift-shift: Significa cuando movemos nuestros recursos a la nube sin recrear la arquitectura
 - classic lift: Cuando la aplicacion y la data la movemos a la nube
@@ -178,12 +179,11 @@ Tiene varias versiones:
 - Power BI Mobile: Ver reportes en el camino
 - Power BI Service: Acceder y crear reportes en la nube
 - Power BI Embedded: Es una forma de embeber componentes de power bi en nuestra apps
-
 :::note
 Por defecto todos los reportes que se hacen en power bi son interactivos
 :::
 
-### Power BI Desktop vs Powe BI Service
+### Power BI Desktop vs Power BI Service
 
 1. Power BI Desktop
     - Es un programa gratis para windows
